--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-streamlit==1.10.0
+streamlit==1.36.0
 plotly==5.24.1
 requests==2.32.3
 pandas==2.2.3
-beautifulsoup4==5.2.0
+beautifulsoup4==4.12.3
+altair==5.3.0
+rich==13.7.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pygments==2.18.0
